--- a/config/config.env
+++ b/config/config.env
@@ -2,5 +2,6 @@ PORT = 3000
 
 MONGO_URI = mongodb+srv://oriolade:misadi99@adenode.blqb2.mongodb.net/biography?retryWrites=true&w=majority
 
-GOOGLE_CLIENT_ID = 755422234864-urkelierhimaa8e6ka45d09akpr6e5hd.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
+
+//GOOGLE_CLIENT_ID hidden...
+//GOOGLE_ CLIENT_SECRET hidden...
